--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@11ty/eleventy-plugin-rss": "^1.0.9",
     "@11ty/eleventy-plugin-syntaxhighlight": "^3.0.4",
     "eleventy-plugin-embed-twitter": "^1.0.2",
+    "eleventy-plugin-youtube-embed": "^1.5.0",
     "frontm8er": "^1.0.4",
     "imagemin": "^7.0.1",
     "imagemin-pngquant": "^9.0.1",
