--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "frontm8er": "^1.0.4",
     "imagemin": "^7.0.1",
     "imagemin-pngquant": "^9.0.1",
+    "markdown-it-anchor": "^6.0.1",
     "puppeteer": "^5.5.0"
   },
   "devDependencies": {
